--- a/has-law/public/index.html
+++ b/has-law/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="If you asked us “Who’s the boss?” At HAS Attorneys at Law, our answer would always be “Our client”. Every personnel at HAS Attorneys at Law works toward achieving the goal for the client’s best interest."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
