change description wording

--- a/has-law/public/index.html
+++ b/has-law/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="If you asked us “Who’s the boss?” At HAS Attorneys at Law, our answer would always be “Our client”. Every personnel at HAS Attorneys at Law works toward achieving the goal for the client’s best interest."
+      content="Welcome to HAS Attorneys at Law, where we understand that law is not a separate entity, but rather the heart that drives the business world."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <!--
