--- a/has-law/public/index.html
+++ b/has-law/public/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <link href="//vjs.zencdn.net/8.3.0/video-js.min.css" rel="stylesheet" />
+    <script src="//vjs.zencdn.net/8.3.0/video.min.js"></script>
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
